--- a/OsmAnd-telegram/res/values/strings.xml
+++ b/OsmAnd-telegram/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
+	<string name="points_size">%1$d points</string>
+	<string name="shared_string_date">Date</string>
 	<string name="shared_string_collected">Collected</string>
 	<string name="gps_points">Gps points</string>
 	<string name="shared_string_sent">Sent</string>
