--- a/OsmAnd-telegram/res/values/strings.xml
+++ b/OsmAnd-telegram/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
+	<string name="please_update_osmand">Please update OsmAnd to view data on the map</string>
+	<string name="shared_string_update">Update</string>
 	<string name="gps_points_in_buffer">sent (%1$d in buffer)</string>
 	<string name="points_size">%1$d points</string>
 	<string name="shared_string_date">Date</string>
