--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -2995,7 +2995,7 @@
     <string name="test_voice_desrc">Tap a button and listen to the corresponding voice prompt to identify missing or faulty prompts.</string>
     <string name="route_class_stat_container">Class</string>
     <string name="route_surface_stat_container">Surface</string>
-    <string name="route_smoothness_stat_container">Smoothenss</string>
+    <string name="route_smoothness_stat_container">Smoothness</string>
     <string name="route_steepness_stat_container">Steepness</string>
     <string name="run_full_osmand_msg">You are using {0} Map which is powered by OsmAnd. Do you want to launch OsmAnd full version?</string>
     <string name="run_full_osmand_header">Launch OsmAnd?</string>
