Improve dial country codes

--- a/OsmAnd-telegram/res/values/strings.xml
+++ b/OsmAnd-telegram/res/values/strings.xml
@@ -1,211 +1,256 @@
 <resources>
 	<string-array name="DialingCountryCode" >
-		<item>32,BE</item>
-		<item>501,BZ</item>
-		<item>229,BJ</item>
-		<item>975,BT</item>
-		<item>591,BO</item>
-		<item>387,BA</item>
-		<item>267,BW</item>
-		<item>55,BR</item>
-		<item>673,BN</item>
-		<item>359,BG</item>
-		<item>226,BF</item>
-		<item>95,MM</item>
-		<item>257,BI</item>
-		<item>855,KH</item>
-		<item>237,CM</item>
-		<item>1,CA</item>
-		<item>238,CV</item>
-		<item>236,CF</item>
-		<item>235,TD</item>
-		<item>56,CL</item>
-		<item>86,CN</item>
-		<item>61,CX</item>
-		<item>61,CC</item>
-		<item>57,CO</item>
-		<item>269,KM</item>
-		<item>242,CG</item>
-		<item>243,CD</item>
-		<item>682,CK</item>
-		<item>506,CR</item>
-		<item>385,HR</item>
-		<item>53,CU</item>
-		<item>357,CY</item>
-		<item>93,AF</item>
-		<item>355,AL</item>
-		<item>213,DZ</item>
-		<item>376,AD</item>
-		<item>244,AO</item>
-		<item>672,AQ</item>
-		<item>54,AR</item>
-		<item>374,AM</item>
-		<item>297,AW</item>
-		<item>61,AU</item>
-		<item>43,AT</item>
-		<item>994,AZ</item>
-		<item>973,BH</item>
-		<item>880,BD</item>
-		<item>375,BY</item>
-		<item>420,CZ</item>
-		<item>45,DK</item>
-		<item>253,DJ</item>
-		<item>670,TL</item>
-		<item>593,EC</item>
-		<item>20,EG</item>
-		<item>503,SV</item>
-		<item>240,GQ</item>
-		<item>358,FI</item>
-		<item>33,FR</item>
-		<item>291,ER</item>
-		<item>372,EE</item>
-		<item>251,ET</item>
-		<item>500,FK</item>
-		<item>298,FO</item>
-		<item>679,FJ</item>
-		<item>689,PF</item>
-		<item>241,GA</item>
-		<item>220,GM</item>
-		<item>995,GE</item>
-		<item>49,DE</item>
-		<item>233,GH</item>
-		<item>350,GI</item>
-		<item>30,GR</item>
-		<item>299,GL</item>
-		<item>502,GT</item>
-		<item>224,GN</item>
-		<item>245,GW</item>
-		<item>592,GY</item>
-		<item>509,HT</item>
-		<item>504,HN</item>
-		<item>852,HK</item>
-		<item>36,HU</item>
-		<item>91,IN</item>
-		<item>62,ID</item>
-		<item>98,IR</item>
-		<item>964,IQ</item>
-		<item>353,IE</item>
-		<item>44,IM</item>
-		<item>972,IL</item>
-		<item>39,IT</item>
-		<item>225,CI</item>
-		<item>81,JP</item>
-		<item>962,JO</item>
-		<item>7,KZ</item>
-		<item>254,KE</item>
-		<item>686,KI</item>
-		<item>965,KW</item>
-		<item>996,KG</item>
-		<item>856,LA</item>
-		<item>371,LV</item>
-		<item>961,LB</item>
-		<item>266,LS</item>
-		<item>231,LR</item>
-		<item>218,LY</item>
-		<item>423,LI</item>
-		<item>370,LT</item>
-		<item>352,LU</item>
-		<item>853,MO</item>
-		<item>389,MK</item>
-		<item>261,MG</item>
-		<item>265,MW</item>
-		<item>60,MY</item>
-		<item>960,MV</item>
-		<item>223,ML</item>
-		<item>356,MT</item>
-		<item>692,MH</item>
-		<item>222,MR</item>
-		<item>230,MU</item>
-		<item>262,YT</item>
-		<item>52,MX</item>
-		<item>691,FM</item>
-		<item>373,MD</item>
-		<item>377,MC</item>
-		<item>976,MN</item>
-		<item>382,ME</item>
-		<item>212,MA</item>
-		<item>258,MZ</item>
-		<item>264,NA</item>
-		<item>674,NR</item>
-		<item>977,NP</item>
-		<item>31,NL</item>
-		<item>599,AN</item>
-		<item>687,NC</item>
-		<item>64,NZ</item>
-		<item>505,NI</item>
-		<item>227,NE</item>
-		<item>234,NG</item>
-		<item>683,NU</item>
-		<item>850,KP</item>
-		<item>47,NO</item>
-		<item>968,OM</item>
-		<item>92,PK</item>
-		<item>680,PW</item>
-		<item>507,PA</item>
-		<item>675,PG</item>
-		<item>595,PY</item>
-		<item>51,PE</item>
-		<item>63,PH</item>
-		<item>870,PN</item>
-		<item>48,PL</item>
-		<item>351,PT</item>
-		<item>1,PR</item>
-		<item>974,QA</item>
-		<item>40,RO</item>
-		<item>7,RU</item>
-		<item>250,RW</item>
-		<item>590,BL</item>
-		<item>685,WS</item>
-		<item>378,SM</item>
-		<item>239,ST</item>
-		<item>966,SA</item>
-		<item>221,SN</item>
-		<item>381,RS</item>
-		<item>248,SC</item>
-		<item>232,SL</item>
-		<item>65,SG</item>
-		<item>421,SK</item>
-		<item>386,SI</item>
-		<item>677,SB</item>
-		<item>252,SO</item>
-		<item>27,ZA</item>
-		<item>82,KR</item>
-		<item>34,ES</item>
-		<item>94,LK</item>
-		<item>290,SH</item>
-		<item>508,PM</item>
-		<item>249,SD</item>
-		<item>597,SR</item>
-		<item>268,SZ</item>
-		<item>46,SE</item>
-		<item>41,CH</item>
-		<item>963,SY</item>
-		<item>886,TW</item>
-		<item>992,TJ</item>
-		<item>255,TZ</item>
-		<item>66,TH</item>
-		<item>228,TG</item>
-		<item>690,TK</item>
-		<item>676,TO</item>
-		<item>216,TN</item>
-		<item>90,TR</item>
-		<item>993,TM</item>
-		<item>688,TV</item>
-		<item>971,AE</item>
-		<item>256,UG</item>
-		<item>44,GB</item>
-		<item>380,UA</item>
-		<item>598,UY</item>
-		<item>1,US</item>
-		<item>998,UZ</item>
-		<item>678,VU</item>
-		<item>39,VA</item>
-		<item>58,VE</item>
-		<item>84,VN</item>
-		<item>681,WF</item>
-		<item>967,YE</item>
-		<item>260,ZM</item>
-		<item>263,ZW</item>
+		<item>AB,+7840,+7940,+99544</item>
+		<item>AF,+93</item>
+		<item>AX,+35818</item>
+		<item>AL,+355</item>
+		<item>DZ,+213</item>
+		<item>AS,+1684</item>
+		<item>AD,+376</item>
+		<item>AO,+244</item>
+		<item>AI,+1264</item>
+		<item>AG,+1268</item>
+		<item>AR,+54</item>
+		<item>AM,+374</item>
+		<item>AW,+297</item>
+		<item>SH,+247</item>
+		<item>AU,+61</item>
+		<item>AU,+672</item>
+		<item>AT,+43</item>
+		<item>AZ,+994</item>
+		<item>BS,+1242</item>
+		<item>BH,+973</item>
+		<item>BD,+880</item>
+		<item>BB,+1246</item>
+		<item>AG,+1268</item>
+		<item>BY,+375</item>
+		<item>BE,+32</item>
+		<item>BZ,+501</item>
+		<item>BJ,+229</item>
+		<item>BM,+1441</item>
+		<item>BT,+975</item>
+		<item>BO,+591</item>
+		<item>BQ,+5997</item>
+		<item>BA,+387</item>
+		<item>BW,+267</item>
+		<item>BR,+55</item>
+		<item>IO,+246</item>
+		<item>VG,+1284</item>
+		<item>BN,+673</item>
+		<item>BG,+359</item>
+		<item>BF,+226</item>
+		<item>MY,+95</item>
+		<item>BI,+257</item>
+		<item>KH,+855</item>
+		<item>CM,+237</item>
+		<item>CA,+1</item>
+		<item>CV,+238</item>
+		<item>KY,+1345</item>
+		<item>CF,+236</item>
+		<item>TD,+235</item>
+		<item>CL,+56</item>
+		<item>CN,+86</item>
+		<item>CX,+61</item>
+		<item>CC,+61</item>
+		<item>CO,+57</item>
+		<item>KM,+269</item>
+		<item>CG,+242</item>
+		<item>CD,+243</item>
+		<item>CK,+682</item>
+		<item>CR,+506</item>
+		<item>CI,+225</item>
+		<item>HR,+385</item>
+		<item>CU,+53</item>
+		<item>CW,+5999</item>
+		<item>CY,+357</item>
+		<item>CZ,+420</item>
+		<item>DK,+45</item>
+		<item>DG,+246</item>
+		<item>DJ,+253</item>
+		<item>DM,+1767</item>
+		<item>DO,+1809,+1829,+1849</item>
+		<item>TL,+670</item>
+		<item>EC,+593</item>
+		<item>EG,+20</item>
+		<item>SV,+503</item>
+		<item>GQ,+240</item>
+		<item>ER,+291</item>
+		<item>EE,+372</item>
+		<item>ET,+251</item>
+		<item>FK,+500</item>
+		<item>FO,+298</item>
+		<item>FJ,+679</item>
+		<item>FI,+358</item>
+		<item>FR,+33</item>
+		<item>GF,+594</item>
+		<item>PF,+689</item>
+		<item>GA,+241</item>
+		<item>GM,+220</item>
+		<item>GE,+995</item>
+		<item>DE,+49</item>
+		<item>GH,+233</item>
+		<item>GI,+350</item>
+		<item>GR,+30</item>
+		<item>GL,+299</item>
+		<item>GD,+1473</item>
+		<item>GP,+590</item>
+		<item>GU,+1671</item>
+		<item>GT,+502</item>
+		<item>GG,+44</item>
+		<item>GN,+224</item>
+		<item>GW,+245</item>
+		<item>GY,+592</item>
+		<item>HT,+509</item>
+		<item>HN,+504</item>
+		<item>HK,+852</item>
+		<item>HU,+36</item>
+		<item>IS,+354</item>
+		<item>IN,+91</item>
+		<item>ID,+62</item>
+		<item>IR,+98</item>
+		<item>IQ,+964</item>
+		<item>IE,+353</item>
+		<item>IL,+972</item>
+		<item>IT,+39</item>
+		<item>JM,+1876</item>
+		<item>SJ,+4779</item>
+		<item>JP,+81</item>
+		<item>JE,+44</item>
+		<item>JO,+962</item>
+		<item>KZ,+76,+77</item>
+		<item>KE,+254</item>
+		<item>KI,+686</item>
+		<item>KP,+850</item>
+		<item>KR,+82</item>
+		<item>KW,+965</item>
+		<item>KG,+996</item>
+		<item>LA,+856</item>
+		<item>LV,+371</item>
+		<item>LB,+961</item>
+		<item>LS,+266</item>
+		<item>LR,+231</item>
+		<item>LY,+218</item>
+		<item>LI,+423</item>
+		<item>LT,+370</item>
+		<item>LU,+352</item>
+		<item>MO,+853</item>
+		<item>MK,+389</item>
+		<item>MG,+261</item>
+		<item>MW,+265</item>
+		<item>MY,+60</item>
+		<item>MV,+960</item>
+		<item>ML,+223</item>
+		<item>MT,+356</item>
+		<item>MH,+692</item>
+		<item>MQ,+596</item>
+		<item>MR,+222</item>
+		<item>MU,+230</item>
+		<item>YT,+262</item>
+		<item>MX,+52</item>
+		<item>FM,+691</item>
+		<item>MD,+373</item>
+		<item>MC,+377</item>
+		<item>MN,+976</item>
+		<item>ME,+382</item>
+		<item>MS,+1664</item>
+		<item>MA,+212</item>
+		<item>MZ,+258</item>
+		<item>NA,+264</item>
+		<item>NR,+674</item>
+		<item>NP,+977</item>
+		<item>NL,+31</item>
+		<item>NC,+687</item>
+		<item>NZ,+64</item>
+		<item>NI,+505</item>
+		<item>NE,+227</item>
+		<item>NG,+234</item>
+		<item>NU,+683</item>
+		<item>NF,+672</item>
+		<item>MP,+1670</item>
+		<item>NO,+47</item>
+		<item>OM,+968</item>
+		<item>PK,+92</item>
+		<item>PW,+680</item>
+		<item>PS,+970</item>
+		<item>PA,+507</item>
+		<item>PG,+675</item>
+		<item>PY,+595</item>
+		<item>PE,+51</item>
+		<item>PH,+63</item>
+		<item>PN,+64</item>
+		<item>PL,+48</item>
+		<item>PT,+351</item>
+		<item>PR,+1787,+1939</item>
+		<item>QA,+974</item>
+		<item>RE,+262</item>
+		<item>RO,+40</item>
+		<item>RU,+7</item>
+		<item>RW,+250</item>
+		<item>BL,+590</item>
+		<item>SH,+290</item>
+		<item>KN,+1869</item>
+		<item>LC,+1758</item>
+		<item>MF,+590</item>
+		<item>PM,+508</item>
+		<item>VC,+1784</item>
+		<item>WS,+685</item>
+		<item>SM,+378</item>
+		<item>ST,+239</item>
+		<item>SA,+966</item>
+		<item>SN,+221</item>
+		<item>RS,+381</item>
+		<item>SC,+248</item>
+		<item>SL,+232</item>
+		<item>SG,+65</item>
+		<item>BQ,+5993</item>
+		<item>SX,+1721</item>
+		<item>SK,+421</item>
+		<item>SI,+386</item>
+		<item>SB,+677</item>
+		<item>SO,+252</item>
+		<item>ZA,+27</item>
+		<item>GS,+500</item>
+		<item>!1,+99534</item>
+		<item>SS,+211</item>
+		<item>ES,+34</item>
+		<item>LK,+94</item>
+		<item>SD,+249</item>
+		<item>SR,+597</item>
+		<item>SJ,+4779</item>
+		<item>SZ,+268</item>
+		<item>SE,+46</item>
+		<item>CH,+41</item>
+		<item>SY,+963</item>
+		<item>TW,+886</item>
+		<item>TJ,+992</item>
+		<item>TZ,+255</item>
+		<item>TH,+66</item>
+		<item>TG,+228</item>
+		<item>TK,+690</item>
+		<item>TO,+676</item>
+		<item>TT,+1868</item>
+		<item>TN,+216</item>
+		<item>TR,+90</item>
+		<item>TM,+993</item>
+		<item>TC,+1649</item>
+		<item>TV,+688</item>
+		<item>UG,+256</item>
+		<item>UA,+380</item>
+		<item>AE,+971</item>
+		<item>UK,+44</item>
+		<item>US,+1</item>
+		<item>UY,+598</item>
+		<item>VI,+1340</item>
+		<item>UZ,+998</item>
+		<item>VU,+678</item>
+		<item>VE,+58</item>
+		<item>VA,+3906698,+379</item>
+		<item>VN,+84</item>
+		<item>WF,+681</item>
+		<item>YE,+967</item>
+		<item>ZM,+260</item>
+		<item>!1,+255</item>
+		<item>ZW,+263</item>
 	</string-array>
 	<string name="shared_string_telegram">Telegram</string>
 	<string name="privacy_policy_use_telegram">We use a Telegram (messaging app) to connect people and make it easier for you to communicate with them.</string>
